# jobpilot

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SETUP_FOR_HELPERS.md  WHAT_IS_THIS.md  __init__.py  cli.py  install.sh  jobpilot  pyproject.toml  ruff.toml
core/: analytics.py  application_answerer.py  application_tracker.py  autonomy.py  bro_client.py  browser_interface.py  cdp_bridge.py  config.py  cover_letter_gen.py  doctor.py  engine.py  engine_helpers.py  engine_run.py  events.py  form_filler.py  jd_parser.py  job_scorer.py  linkedin_parser.py  llm_client.py  logger.py  page_info.py  policy_config.py  portal_scanner.py  profile_store.py  question_matcher.py  queue_builder.py  resume_tailor.py  selector_registry.py  server.py  work_style.py
docs/: APPLICATION_FLOW.md  BOOT.md  GIGS.md  GIGS_MIGRATION.md  IOS_SHORTCUT.md  REMOTE_ACCESS.md  gigs-scoring.example.json  policy.example.json
extension/: background.js  content.js  manifest.json
gigs/: __init__.py  cli.py  server.py  swipe.html
learning/: action_recorder.py  learning_db.py
scripts/: agents  boot.sh  capture_application_tab.py  gigs_digest.sh  gigs_weekly.sh  inspect_application_tab.py  install_gigs_launchd.sh  install_swipe_launchd.sh  launch_chrome.sh  make_apply_card.py  make_paste_sheet.py  migrate_to_sqlite.py  render_resume_html.py  stop.sh  swipe_serve.sh
tests/: mock_browser.py  test_analytics.py  test_application_answerer.py  test_application_tracker.py  test_autonomy.py  test_bro_client.py  test_cdp_bridge.py  test_center_panes.py  test_chat_overlay.py  test_cli.py  test_cli_fixes.py  test_cli_gigs_mount.py  test_config.py  test_core.py  test_doctor.py  (+29 more)
(+79 files in other folders)
